objects/HS_Partner_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>HS_Partner_Engagement__r.Account_Address__c</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Vacancy_Starts__c</fullName>
        <label>Date Vacancy Starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Event_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HS Event Day</label>
        <referenceTo>HS_Event_Day__c</referenceTo>
        <relationshipLabel>HS Partner Opportunities</relationshipLabel>
        <relationshipName>HS_Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Partner_Engagement__c</fullName>
        <label>HS Partner Engagement</label>
        <referenceTo>HS_Partner_Engagement__c</referenceTo>
        <relationshipName>HS_Store_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HS_Region__c</fullName>
        <formula>HS_Partner_Engagement__r.HS_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Subregion__c</fullName>
        <formula>IF(INCLUDES(  HS_Partner_Engagement__r.HS_Subregion__c , &quot;London North West&quot;), &quot;London North West, &quot;, &quot;&quot;)
&amp;
IF(INCLUDES(HS_Partner_Engagement__r.HS_Subregion__c , &quot;London North East&quot;), &quot;London North East, &quot;, &quot;&quot;)
&amp;
IF(INCLUDES(HS_Partner_Engagement__r.HS_Subregion__c , &quot;London South West&quot;), &quot;London South West, &quot;, &quot;&quot;)
&amp;
IF(INCLUDES(HS_Partner_Engagement__r.HS_Subregion__c , &quot;London South East&quot;), &quot;London South East&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS Subregion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_OJE_placements__c</fullName>
        <label>Number of OJE placements</label>
        <summaryFilterItems>
            <field>HS_Job_Placement__c.Placement_Status__c</field>
            <operation>equals</operation>
            <value>OJE</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_Job_Placement__c.HS_Store_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Placements_confirmed__c</fullName>
        <label>Number of Placements filled</label>
        <summaryFilterItems>
            <field>HS_Job_Placement__c.Placement_Status__c</field>
            <operation>equals</operation>
            <value>Placement Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>HS_Job_Placement__c.HS_Store_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_vacancies_available__c</fullName>
        <inlineHelpText>How many vacancies does the Job opportunity cover?</inlineHelpText>
        <label>Number of vacancies for this placement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_vacancies_left__c</fullName>
        <formula>Number_of_vacancies_available__c -  Number_of_Placements_confirmed__c</formula>
        <label>Number of vacancies left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>HS Partner Opportunity</label>
    <listViews>
        <fullName>Interview_Day_Attendance_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>HS_Partner_Engagement__c</columns>
        <columns>Number_of_OJE_placements__c</columns>
        <columns>Number_of_Placements_confirmed__c</columns>
        <columns>Number_of_vacancies_available__c</columns>
        <columns>Number_of_vacancies_left__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HS_Event_Day__c</field>
            <operation>equals</operation>
            <value>Interview Day - Starbucks - 09/03/16</value>
        </filters>
        <label>Interview Day - Starbucks - 09/03/16</label>
    </listViews>
    <nameField>
        <label>HS Store Opportunity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Partner Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>